k8s/tests/e2e/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-tracker-${NAME}
  namespace: apps
status:
  readyReplicas: 1
